# radio_fix

./: plan.md  pyproject.toml  send_fastpath.py  setup.py  test.txt
backup/: DIAGRAM_KERJA.md  bc.py  radio_image_transfer.py
benchmarks/: benchmark_optimized_transfer.py  benchmark_pluto_rf_optimized.py  endurance_single_device_fastpath.py  profile_single_device_fastpath.py
configs/: optimized_pluto_rf.yaml  optimized_transfer_2mbps.yaml
docs/: api_optimized_transfer.md  pluto_rf_reproduction.md  single_device_fastpath.md  workflow.md
examples/: optimized_transfer_example.py
optimized_transfer/: __init__.py  bitmap.py  config.py  correlation.py  correlation_cy.pyx  fastpath_rf.py  framing.py  pluto_adapter.py  pluto_rf.py  runtime.py
perf_workspace/: performance_dashboard.html  single_device_fastpath_profile.json
perf_workspace/receive_baseline/: transfer_report.json
receive/: fastpath_endurance_dashboard.html  fastpath_endurance_smoke.json  fastpath_last_run.json  fastpath_validation_cache.json  transfer_report.json
reports/: fastpath_rf_profile_report.md
tests/: test_fastpath_rf.py  test_optimized_transfer.py  test_pluto_rf_config.py
tools/: generate_performance_dashboard.py  traffic_generator.py
